--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ notifications:
         on_success: never # default: change
         on_failure: always # default: always
 
+install:
+    sudo apt install -y python3-tk python-tk 
+
 script:
     - nosetests
 
