--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ notifications:
         on_failure: always # default: always
 
 install:
-    sudo apt install -y python3-tk python-tk 
+    - sudo apt update
+    - sudo apt install -y python3-tk python-tk 
 
 script:
     - nosetests
