--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ notifications:
 install:
     - sudo apt update
     - sudo apt install -y python3-tk python-tk 
+    - pip install -r requirements.txt
 
 script:
     - nosetests
