--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
     - pip install -r requirements.txt
 
 script:
-    - nosetests src
+    - nosetests dilawar
 
 deploy:
   provider: pypi
