--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
     - pip install -r requirements.txt
 
 script:
-    - nosetests dilawar
+    - python -m nose dilawar
 
 deploy:
   provider: pypi
