--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,10 @@ notifications:
 install:
     - sudo apt update
     - sudo apt install -y python3-tk python-tk 
-    - pip install -r requirements.txt
 
 script:
     - python -m nose dilawar
+    - python -m setup.py install
 
 deploy:
   provider: pypi
