--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,12 @@ colorama = "^0.4.4"
 pandocfilters = "^1.4.3"
 matplotlib = "^3.4.2"
 networkx = {version = "^2.5.1", optional = true}
-pydot = {version = "^1.4.2", extras = ["graph"]}
-pygraphviz = {version = "^1.7", extras = ["graph"]}
+pydot = {version = "^1.4.2", optional = true}
+pygraphviz = {version = "^1.7", optional = true}
 loguru = "^0.5.3"
+
+[tool.poetry.extras]
+graph = [ "networkx", "pydot" ]
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
